--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import Awards from "@/components/Awards.astro";
 import Heading from "@/components/Heading.astro";
 import Education from "@/components/Education.astro";
