--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import Button from "@/components/Button.astro";
 import Photo from "@/components/Photo";
 import BaseLayout from "@/layouts/BaseLayout.astro";
