--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import Card from "@/components/Card.astro";
 import Heading from "@/components/Heading.astro";
 import BaseLayout from "@/layouts/BaseLayout.astro";
